[package]
name = "eye_protect"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.7", features = ["glow", "tokio", "canvas"] }
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
