[package]
name = "eye_protect"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.14", features = ["tokio", "canvas"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 'z'   # 優化大小
lto = true        # 連結時優化
codegen-units = 1 # 提高優化品質
panic = 'abort'   # 減少展開開銷
